tests/integration/pilot/cni/testdata/cni.yaml
apiVersion: install.istio.io/v1alpha1
kind: IstioOperator
spec:
  profile: empty
  components:
    cni:
      enabled: true
      namespace: kube-system
